; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_cxgb4_main.c_set_sge_param.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_cxgb4_main.c_set_sge_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_ringparam = type { i64, i64, i64, i64 }
%struct.port_info = type { i32, i32, %struct.adapter* }
%struct.adapter = type { i32, %struct.sge }
%struct.sge = type { %struct.TYPE_10__*, %struct.TYPE_7__* }
%struct.TYPE_10__ = type { %struct.TYPE_9__, %struct.TYPE_8__ }
%struct.TYPE_9__ = type { i64 }
%struct.TYPE_8__ = type { i64 }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@MAX_RX_BUFFERS = common dso_local global i64 0, align 8
@MAX_TXQ_ENTRIES = common dso_local global i64 0, align 8
@MAX_RSPQ_ENTRIES = common dso_local global i64 0, align 8
@MIN_RSPQ_ENTRIES = common dso_local global i64 0, align 8
@MIN_FL_ENTRIES = common dso_local global i64 0, align 8
@MIN_TXQ_ENTRIES = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@FULL_INIT_DONE = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ethtool_ringparam*)* @set_sge_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_sge_param(%struct.net_device* %0, %struct.ethtool_ringparam* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.ethtool_ringparam*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.port_info*, align 8
  %8 = alloca %struct.adapter*, align 8
  %9 = alloca %struct.sge*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.ethtool_ringparam* %1, %struct.ethtool_ringparam** %5, align 8
  %10 = load %struct.net_device*, %struct.net_device** %4, align 8
  %11 = call %struct.port_info* @netdev_priv(%struct.net_device* %10)
  store %struct.port_info* %11, %struct.port_info** %7, align 8
  %12 = load %struct.port_info*, %struct.port_info** %7, align 8
  %13 = getelementptr inbounds %struct.port_info, %struct.port_info* %12, i32 0, i32 2
  %14 = load %struct.adapter*, %struct.adapter** %13, align 8
  store %struct.adapter* %14, %struct.adapter** %8, align 8
  %15 = load %struct.adapter*, %struct.adapter** %8, align 8
  %16 = getelementptr inbounds %struct.adapter, %struct.adapter* %15, i32 0, i32 1
  store %struct.sge* %16, %struct.sge** %9, align 8
  %17 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %18 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @MAX_RX_BUFFERS, align 8
  %21 = icmp sgt i64 %19, %20
  br i1 %21, label %57, label %22

22:                                               ; preds = %2
  %23 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %24 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %23, i32 0, i32 3
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %57, label %27

27:                                               ; preds = %22
  %28 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %29 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @MAX_TXQ_ENTRIES, align 8
  %32 = icmp sgt i64 %30, %31
  br i1 %32, label %57, label %33

33:                                               ; preds = %27
  %34 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %35 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %34, i32 0, i32 2
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* @MAX_RSPQ_ENTRIES, align 8
  %38 = icmp sgt i64 %36, %37
  br i1 %38, label %57, label %39

39:                                               ; preds = %33
  %40 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %41 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %40, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* @MIN_RSPQ_ENTRIES, align 8
  %44 = icmp slt i64 %42, %43
  br i1 %44, label %57, label %45

45:                                               ; preds = %39
  %46 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %47 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = load i64, i64* @MIN_FL_ENTRIES, align 8
  %50 = icmp slt i64 %48, %49
  br i1 %50, label %57, label %51

51:                                               ; preds = %45
  %52 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %53 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %52, i32 0, i32 1
  %54 = load i64, i64* %53, align 8
  %55 = load i64, i64* @MIN_TXQ_ENTRIES, align 8
  %56 = icmp slt i64 %54, %55
  br i1 %56, label %57, label %60

57:                                               ; preds = %51, %45, %39, %33, %27, %22, %2
  %58 = load i32, i32* @EINVAL, align 4
  %59 = sub nsw i32 0, %58
  store i32 %59, i32* %3, align 4
  br label %128

60:                                               ; preds = %51
  %61 = load %struct.adapter*, %struct.adapter** %8, align 8
  %62 = getelementptr inbounds %struct.adapter, %struct.adapter* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 8
  %64 = load i32, i32* @FULL_INIT_DONE, align 4
  %65 = and i32 %63, %64
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %70

67:                                               ; preds = %60
  %68 = load i32, i32* @EBUSY, align 4
  %69 = sub nsw i32 0, %68
  store i32 %69, i32* %3, align 4
  br label %128

70:                                               ; preds = %60
  store i32 0, i32* %6, align 4
  br label %71

71:                                               ; preds = %124, %70
  %72 = load i32, i32* %6, align 4
  %73 = load %struct.port_info*, %struct.port_info** %7, align 8
  %74 = getelementptr inbounds %struct.port_info, %struct.port_info* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 8
  %76 = icmp slt i32 %72, %75
  br i1 %76, label %77, label %127

77:                                               ; preds = %71
  %78 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %79 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %78, i32 0, i32 1
  %80 = load i64, i64* %79, align 8
  %81 = load %struct.sge*, %struct.sge** %9, align 8
  %82 = getelementptr inbounds %struct.sge, %struct.sge* %81, i32 0, i32 1
  %83 = load %struct.TYPE_7__*, %struct.TYPE_7__** %82, align 8
  %84 = load %struct.port_info*, %struct.port_info** %7, align 8
  %85 = getelementptr inbounds %struct.port_info, %struct.port_info* %84, i32 0, i32 1
  %86 = load i32, i32* %85, align 4
  %87 = load i32, i32* %6, align 4
  %88 = add nsw i32 %86, %87
  %89 = sext i32 %88 to i64
  %90 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %83, i64 %89
  %91 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %90, i32 0, i32 0
  %92 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %91, i32 0, i32 0
  store i64 %80, i64* %92, align 8
  %93 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %94 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %93, i32 0, i32 0
  %95 = load i64, i64* %94, align 8
  %96 = add nsw i64 %95, 8
  %97 = load %struct.sge*, %struct.sge** %9, align 8
  %98 = getelementptr inbounds %struct.sge, %struct.sge* %97, i32 0, i32 0
  %99 = load %struct.TYPE_10__*, %struct.TYPE_10__** %98, align 8
  %100 = load %struct.port_info*, %struct.port_info** %7, align 8
  %101 = getelementptr inbounds %struct.port_info, %struct.port_info* %100, i32 0, i32 1
  %102 = load i32, i32* %101, align 4
  %103 = load i32, i32* %6, align 4
  %104 = add nsw i32 %102, %103
  %105 = sext i32 %104 to i64
  %106 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %99, i64 %105
  %107 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %106, i32 0, i32 1
  %108 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %107, i32 0, i32 0
  store i64 %96, i64* %108, align 8
  %109 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %5, align 8
  %110 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %109, i32 0, i32 2
  %111 = load i64, i64* %110, align 8
  %112 = load %struct.sge*, %struct.sge** %9, align 8
  %113 = getelementptr inbounds %struct.sge, %struct.sge* %112, i32 0, i32 0
  %114 = load %struct.TYPE_10__*, %struct.TYPE_10__** %113, align 8
  %115 = load %struct.port_info*, %struct.port_info** %7, align 8
  %116 = getelementptr inbounds %struct.port_info, %struct.port_info* %115, i32 0, i32 1
  %117 = load i32, i32* %116, align 4
  %118 = load i32, i32* %6, align 4
  %119 = add nsw i32 %117, %118
  %120 = sext i32 %119 to i64
  %121 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %114, i64 %120
  %122 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %121, i32 0, i32 0
  %123 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %122, i32 0, i32 0
  store i64 %111, i64* %123, align 8
  br label %124

124:                                              ; preds = %77
  %125 = load i32, i32* %6, align 4
  %126 = add nsw i32 %125, 1
  store i32 %126, i32* %6, align 4
  br label %71

127:                                              ; preds = %71
  store i32 0, i32* %3, align 4
  br label %128

128:                                              ; preds = %127, %67, %57
  %129 = load i32, i32* %3, align 4
  ret i32 %129
}

declare dso_local %struct.port_info* @netdev_priv(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
